archive/security/kyverno/policies/ingress-auth.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: update-ingress-annotations
  annotations:
    policies.kyverno.io/title: Update ingress annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates auth annotations on ingresses.
spec:
  validationFailureAction: Enforce
  generateExisting: true
  rules:
    - name: auth
      match:
        any:
          - resources:
              kinds: [ "Ingress" ]
      exclude:
        any:
          - resources:
              annotations:
                auth.home.arpa/disabled: "true"

      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(traefik.ingress.kubernetes.io/router.middlewares): network-system-authelia-auth@kubernetescrd
